# jotsu-python

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
jotsu/: client.py
jotsu/cli/: __init__.py  corpora.py  documents.py  main.py  utils.py  whoami.py  workflows.py
